# DynamixelSDK

dynamixel_sdk_custom_interfaces/: CMakeLists.txt
dynamixel_sdk_custom_interfaces/msg/: GetVelocity.msg
dynamixel_sdk_examples/: CMakeLists.txt
dynamixel_sdk_examples/include/: publish_wheel_odometry.hpp  read_write_node.hpp  read_write_node2.hpp
dynamixel_sdk_examples/src/: publish_wheel_odometry.cpp  read_write_node.cpp  read_write_node2.cpp
dynamixel_sdk_examples/urdf/: myrobot.urdf.xml
